--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <title>ScholarX - Events App</title>
 </head>
 <body>
-<iframe src="https://calendar.google.com/calendar/embed?src=s3va00vgirrf2v3mseg0p8nlsg%40group.calendar.google.com&ctz=Asia/Calcutta" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
-</body>
+  <h1>ScholarX Events</h1>
+<iframe src="https://calendar.google.com/calendar/embed?showTitle=0&amp;showPrint=0&amp;showTabs=0&amp;mode=AGENDA&amp;height=350&amp;wkst=1&amp;hl=en&amp;bgcolor=%23ffff33&amp;src=en.indian%23holiday%40group.v.calendar.google.com&amp;color=%23125A12&amp;src=s3va00vgirrf2v3mseg0p8nlsg%40group.calendar.google.com&amp;color=%23B1365F&amp;ctz=Asia%2FCalcutta" style="border:solid 1px #777" width="250" height="350" frameborder="0" scrolling="no"></iframe>
+  <h2>(c)<a href="http://www.scholarx.xyz">ScholarX</a> - All Rights Reserved.</h2>
+  </body>
 </html>
